--- a/Atividade91.html
+++ b/Atividade91.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-face-aframe.prod.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function() {
-      const list = ["glasses1", "glasses2"];
-      const visibles = [true, false];
+      const list = ["glasses1", "glasses2", "glasses3"];
+      const visibles = [true, false, false];
       const setVisible = (button, entities, visible) => {
         if (visible) {
           button.classList.add("selected");
@@ -45,12 +45,14 @@
       <div class="options-panel">
         <img id="glasses1" src="./imagens/mask1.PNG">
         <img id="glasses2" src="./imagens/mask2.PNG">
+        <img id="glasses3" src="./imagens/mask3.PNG">
       </div>
       <a-scene mindar-face embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
           <a-asset-item id="headModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/examples/face-tracking/assets/sparkar/headOccluder.glb"></a-asset-item>
           <a-asset-item id="glassesModel" src="./objetos/mask1.obj"></a-asset-item>
           <a-asset-item id="glassesModel2" src="./objetos/mask2.obj"></a-asset-item>
+          <a-asset-item id="glassesModel2" src="./objetos/oculos/Glasses.gltf"></a-asset-item>
         </a-assets>
         <a-camera position="0 0 0" active="false"  look-controls-enabled="false" rotation-reader 
           arjs-look-controls="smoothingFactor: 0.05"></a-camera>
@@ -66,6 +68,10 @@
             <a-obj-model rotation="-90 0 0" position="0 -1 0" 
               scale="0.06 0.06 0.06" src="#glassesModel2" class="glasses2-entity" visible="false"></a-obj-model>
         </a-entity>
+        <a-entity mindar-face-target="anchorIndex: 168">
+            <a-gltf-model rotation="-90 0 0" position="0 -1 0" 
+              scale="0.06 0.06 0.06" src="#glassesModel3" class="glasses3-entity" visible="false"></a-gltf-model>
+        </a-entity>        
       </a-scene>
     </div>
   </body>
