--- a/Atividade93.html
+++ b/Atividade93.html
@@ -14,7 +14,7 @@
     <a-scene embedded renderer="logarithmicDepthBuffer: true;" arjs='sourceType: webcam; trackingMethod: best;
       detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled: false;'>
         <a-assets>
-            <a-asset-item id="modelo1" src="objetos/cesto/scene.gltf"></a-asset-item>
+            <a-asset-item id="modelo1" src="objetos/boneco/scene.gltf"></a-asset-item>
             <a-asset-item id="modelo2" src="objetos/esfera/scene.gltf"></a-asset-item>
             <a-asset-item id="modelo3" src="objetos/espelho/scene.gltf"></a-asset-item>
             <a-asset-item id="modelo4" src="objetos/vaso/scene.gltf"></a-asset-item>
